Permissions swagger docs generated
